--- a/src/app/view/pages/eventos/eventos-base/eventos-base.component.html
+++ b/src/app/view/pages/eventos/eventos-base/eventos-base.component.html
@@ -34,6 +34,9 @@
                     <button class="btn btn-warning" (click)="editarEvento(evento)">
                         <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
                     </button>
+                    <button class="btn btn-primary" (click)="administrarMiembros(evento)">
+                        <i class="fa-solid fa-gear" style="color: #ffffff;"></i>
+                    </button>
                     <button class="btn btn-danger" (click)="eliminarEvento(evento)">
                         <i class="fa-solid fa-trash" style="color: #ffffff;"></i>
                     </button>
