--- a/src/app/view/pages/disciplinas/disciplina-base/disciplina-base.component.html
+++ b/src/app/view/pages/disciplinas/disciplina-base/disciplina-base.component.html
@@ -34,6 +34,9 @@
                     <button class="btn btn-warning" (click)="editarDisciplina(disciplina)">
                         <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
                     </button>
+                    <button class="btn btn-primary" (click)="administrarMiembros(disciplina)">
+                        <i class="fa-solid fa-gear" style="color: #ffffff;"></i>
+                    </button>
                     <button class="btn btn-danger" (click)="eliminarDisciplina(disciplina)">
                         <i class="fa-solid fa-trash" style="color: #ffffff;"></i>
                     </button>
