--- a/src/app/view/pages/disciplinas/administrar-miembros/administrar-miembros.component.html
+++ b/src/app/view/pages/disciplinas/administrar-miembros/administrar-miembros.component.html
@@ -1,20 +1,15 @@
 <div class="container p-5" >
-    <div class="row">
-        <div class="col-8">
-            <select id="miSelect" name="miSelect">
-                <tr *ngFor="let miembro of miembros">
-                <!-- Opción 1 -->
-                <option value="opcion1">Opción 1</option>
-                <!-- Opción 2 -->
-                <option value="opcion2">Opción 2</option>
-                <!-- Opción 3 -->
-                <option value="opcion3">Opción 3</option>
-              </select>
+    <div class="row my-4">
+        <div class="col-md-10">
+            <select class="form-select" [(ngModel)]="selectedMiembro" name="miembroDropdown">
+                <option *ngFor="let m of miembrosExternos" [value]="m.id">{{ m.nombre }} {{m.apellido}}</option>
+            </select>
         </div>
-        <div class="col-4">
-
+        <div class="col-md-2">
+            <button class="btn btn-primary" (click)="agregarMiembro()">Inscribir Miembro</button>
         </div>
     </div>
+    
     <div class="row">
         <table class="table">
             <thead class="thead-dark">
