--- a/src/app/view/pages/eventos/administrar-miembros/administrar-miembros.component.html
+++ b/src/app/view/pages/eventos/administrar-miembros/administrar-miembros.component.html
@@ -1,37 +1,1 @@
-<div class="container p-5">
-    <div class="row">
-        <div class="col">
-            <h2>{{titulo}}</h2>
-            <h6>{{subTitulo}}</h6>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <form class="needs-validation" novalidate (ngSubmit)="guardar()">
-                <div class="form-group">
-                    <label for="nombre">Nombre<strong>*</strong></label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="formData.nombre"
-                        required>
-                    <div class="invalid-feedback" *ngIf="!formData.nombre">
-                        Por favor, introduce un nombre válido.
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="modalidad">Modalidad<strong>*</strong></label>
-                    <input type="text" class="form-control" id="modalidad" name="modalidad"
-                        [(ngModel)]="formData.modalidad" required>
-                    <div class="invalid-feedback">
-                        Por favor, introduce una modalidad válida.
-                    </div>
-                </div>
-
-                <div class="mt-3">
-                    <button type="submit" class="btn btn-primary">Guardar</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
+<p>administrar-miembros works!</p>
